# task-manager-api

./: LICENSE  pyproject.toml
alembic/: env.py
alembic/versions/: a33a16889825_create_users_tasks_and_projects_tables.py
src/task_manager_api/: database.py  enums.py  main.py  settings.py
src/task_manager_api/models/: project.py  task.py  user.py
src/task_manager_api/schemas/: user.py
